# rust_example_app

./: Cargo.toml  LICENSE  README.md  build.rs  schema.sql
config/: config.yaml
persistence/numpy/: print_numpy_output.py
proto/: service.proto
proto/requests/: storeMatchesResults.http
src/: lib.rs  main.rs
src/configuration/: app_config.rs
src/examples/: README.md  await_example_test.rs  borrow_checker_test.rs  enums_memory_footprint_test.rs  ex_test.rs  generic_test.rs  inline_macro_example_test.rs  lifetime_test.rs  macros_test.rs  mod.rs  reference_test.rs  send_sync_test.rs  serde_test.rs  string_test.rs  struct_tests.rs  variable_test.rs
src/model/: gold_value.rs  match.rs  ml_dataset.rs  ml_dataset_stats.rs  mod.rs
src/monitoring/: mod.rs  monitoring_example.rs  tracing_example.rs
src/persistence/: ml_dataset_dao.rs  mod.rs  stats_dao.rs
src/persistence/numpy_files/: ml_dataset_dao_numpy_files.rs  mod.rs
src/persistence/ormsea/: mod.rs
src/persistence/sqlx/: mod.rs  stats_dao_sqlx.rs
src/persistence/sqlx/model/: ml_dataset_stats_sqlx.rs  mod.rs
src/processor/: mod.rs  processor.rs  processor_state.rs
src/server/: mod.rs
src/server/grpc/: grpc_server.rs  mod.rs
src/server/grpc/convertors/: match_convertor.rs  mod.rs  timestamp_convertor.rs
src/server/http/: http_response_error.rs  http_server.rs  mod.rs
