[package]
name = "rust_example_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
tokio = { version = "1.21.1", features = ["full"] }
anyhow = { version = "1.0.69", features = ["backtrace"] }
thiserror = "1.0.35"
chrono = { version = "0.4.23", features = ["serde"] }
config = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_with = { version = "2.2.0", features = ["json", "chrono_0_4"] }
serde_json = "1.0.91"
rust_decimal = { version = "1.28.1", features = ["serde-with-str"] }
rust_decimal_macros = { version = "1.28.1" }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "chrono", "decimal", "json", "tls", "uuid"] }
futures = "0.3.24"
async-trait = "0.1.58"
rand = "0.8.5"
actix-web = "4.2.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tracing-attributes = "0.1.23"
tracing-opentelemetry = "0.18.0"
opentelemetry = { version = "0.18.0", default-features = false, features = ["trace"] }
opentelemetry-jaeger = "0.17.0"
prometheus = "0.13.3"
lazy_static = "1.4.0"
pyo3 = { version = "0.18.0", features = ["auto-initialize"] }
numpy = "0.18.0"
tonic = "0.8.0"
prost = "0.11.0"
prost-types = "0.11.1"
strum = "0.24.1"
strum_macros = "0.24.3"

[dev-dependencies]
paste = "1.0"
env_logger = "0.10.0"
test-log = "0.2.11"

[build-dependencies]
tonic-build = { version = "0.8.0", features = ["prost"] }
